--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -41,7 +41,7 @@ header {
     background-color: rgb(245 245 245);
     margin: auto;
     width: 18rem;
-    height: 530px;
+    height: 550px;
     margin: 1rem;
 }
 
@@ -52,7 +52,7 @@ header {
 
 
 .container{
-    margin-bottom: 30px;
+    /* margin-bottom: 30px;  */
     display: flex;
     justify-content: center;
 }
