--- a/src/pages/MessagesPage/MessagesPage.css
+++ b/src/pages/MessagesPage/MessagesPage.css
@@ -6,10 +6,10 @@
     display: flex
 }
 
-.form-control {
+/* .form-control {
     width: 70%;
     margin-left: 10px;
-}
+} */
 
 .title {
     width: 50%;
